gcc/testsuite/rust/rustc/ui/consts/const-eval/panic-never-type_dg.rs
// Regression test for #66975
#![feature(never_type)]

const VOID: ! = panic!();
// { dg-error ".E0080." "" { target *-*-* } .-1 }

fn main() {
    let _ = VOID;
}

